--- a/youzanshangcheng/Untitled-1.html
+++ b/youzanshangcheng/Untitled-1.html
@@ -78,11 +78,13 @@
             height: 70px;
             line-height: 70px;
             padding: 0px 20px;
+            cursor: pointer;
         }
 
         .product{
             text-decoration: none;
             color: #2c3a46;
+            cursor: pointer;
         }
 
         .login{
@@ -127,6 +129,205 @@
             border-radius: 2px;
             cursor: pointer;
         }
+
+        .banner{
+            height: 420px;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            border: 0;
+            font: inherit;
+            font-size: 100%;
+            vertical-align: baseline;
+        }
+
+        .swiper{
+            background-image: url(youzan1.jpg);
+            position: absolute;
+            width: 1580px;
+            height: 420px;
+            background-size: cover;
+            background-position: 100%;
+
+        }
+
+        .swiper-wrapper{
+            position: absolute;
+            width: 1100px;
+            height:420px;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+        }
+
+        .h3{
+        margin-top: 100px;
+        display: block;
+        font-size: 2.53em;
+        }
+        .h31{
+        font-size: 20px;
+        color: #777;
+        margin-bottom: 55px;
+        }
+        .button{
+        width: 160px;
+        height: 40px;
+        line-height: 18px;
+        display: inline-block;
+        text-align: center;
+        box-sizing: border-box;
+        background: #38f;
+        padding: 12px 42px;
+        color: #fff;
+        cursor: pointer;
+        }
+        .font{
+        font-size: 14px;
+        color: #777;
+        margin-top: 15px;
+        display: block;
+        }
+
+        .no-visual{
+            width: 1000px;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            margin: auto;
+        }
+
+        .prev{
+            position: absolute;
+            top: 190px;
+            right: 1030px;
+            left: -190px;
+            width: 60px;
+            height: 60px;
+            background-size: 100% 100%;
+            background-image: url(L.png);
+            cursor: pointer;
+        }
+
+        .next{
+            position: absolute;
+            top: 190px;
+            left: 1030px;
+            right: 500px;
+            width: 60px;
+            height: 60px;
+            background-size: 100% 100%;
+            background-image: url(R.png);
+            cursor: pointer;
+        }
+
+        .main{
+            height: 620px;   
+        }
+
+        .wcard-container{
+            min-width: 1005px;
+            max-width: 1100px;
+            margin: 0 auto;
+            position: relative;
+            zoom: 1;
+        }
+
+        .h1{
+            font-size: 28px;
+            color: #333;
+            letter-spacing: 0;
+            text-align: center;
+            line-height: 40px;
+            padding-top: 90px;
+        }
+
+        .wcard-content{
+            display: flex;
+            margin-top: -430px;
+            margin-left: 200px;
+        }
+
+        .wcard-left{
+            flex: 1;
+            display: flex;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            flex-direction: column;
+        }
+
+        .section{
+            margin-bottom: 28px;
+            margin: 0;
+            padding: 0;
+            border: 0;
+            font: inherit;
+            font-size: 100%;
+            vertical-align: baseline;
+
+        }
+
+        .sectitle{
+            color: #333;
+            font-size: 18px;
+            line-height: 24px;
+            letter-spacing: 0;
+        }
+
+        .secsummary{
+            margin-top: 5px;
+            font-size: 14px;
+            color: #999;
+            letter-spacing: 0;
+            line-height: 24px;
+
+           
+
+
+        }
+
+        .bt-blue{
+            margin-right: 15px;
+            background-color: #38f;
+            color: #fff;
+            font-size: 14px;
+            padding: 10px 42px;
+            border-radius: 2px;
+            display: inline-block;
+            cursor: pointer;
+        }
+
+        .bt-blue-outline{
+            margin-left: 15px;
+            border: 1px solid #38f;
+            color: #38f;
+            padding: 9px 42px;
+            font-size: 14px;
+            border-radius: 2px;
+            display: inline-block;
+            cursor: pointer;
+        }
+
+        .wcard-right{
+            width: 615px;
+        }
+
+        .img{
+            background-size: 100% 100%;
+            background-image: url(youzan2.png);
+            width: 615px;
+            height: 439px;
+            position: absolute;
+            top: 700px;
+            left: 680px;
+
+        }
+
     </style>
 </head>
 <body>
@@ -164,6 +365,56 @@
                 </li>
             </ul>
 
+        </div>
+    </div>
+
+    <div class="banner">
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                    <a class="h3">有赞微商城</a>
+                    <p class="h31">一个软件解决网上开店所有问题</p>
+                    <a class="button">免费试用</a>
+                    <a class="font">或致电 0571 - 8685 7988</a>
+            </div>
+            <div class="no-visual">
+                <div class="prev"></div>
+                <div class="next"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="main">
+        <div class="wcard-container">
+            <div class="h1">有赞微商城 全行业全场景的电商解决方案</div>
+        </div>
+    </div>
+
+    <div class="wcard-content">
+        <div class="wcard-left">
+            <div class="section">
+                <p class="sectitle">3分钟搭建移动商城</p>
+                <p class="secsummary">深挖行业特点 匹配产品功能，提供全行业解决方案</p>
+            </div>
+            <div class="section">
+                <p class="sectitle">近百种营销工具</p>
+                <p class="secsummary">社群营销&节日营销，拉新、转化、复购面面俱到</p>
+            </div>
+            <div class=“section>
+                <p class="sectitle">系统化管理客户</p>
+                <p class="secsummary">客户画像帮您了解客户，会员卡/储值卡实现精准营销</p>
+            </div>
+            <div class="section">
+                <p class="sectitle">分销拓展销售渠道</p>
+                <p class="secsummary">客户帮你卖，员工帮你卖，300万商家帮你卖</p>
+            </div>
+            <div class="section">
+                <a class="bt-blue">免费试用</a>
+                <a class="bt-blue-outline">功能介绍</a>
+            </div>
+        </div>
+
+        <div class="wcard-right">
+            <div class="img"></div>
         </div>
     </div>
 
