--- a/youzanshangcheng/Untitled-1.html
+++ b/youzanshangcheng/Untitled-1.html
@@ -325,7 +325,95 @@
             position: absolute;
             top: 700px;
             left: 680px;
+        }
 
+        .yz-resolutions{
+            overflow: hidden;
+            min-width: 1005px;
+            max-width: 1100px;
+            height: 790px;
+            margin: 0 auto;
+            position: relative;
+            zoom: 1;
+        }
+
+        .h2{
+            text-align: center;
+            font-size: 28px;
+            color: #333;
+            line-height: 40px;
+            padding-top: 90px;
+        }
+
+        .rescontent{
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: 48px;
+            margin-bottom: 48px;
+        }
+
+        .resolution-card{
+            cursor: pointer;
+            width: 256px;
+            height: 256px;
+            border: 1px solid #e5e5e5;
+            border-radius: 2px;
+            margin-right: 20px;
+            margin-bottom: 20px;
+            transition: .5s;
+        }
+
+        .ccover{
+            height: 169px;
+            width: 100%;
+            position: relative;
+        }
+
+        .icon{
+            background-size: 100% 100%;
+            background-image: url(icon.png);
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            margin: 0 auto;
+            left: 98px;
+            top: 54px;
+        }
+
+        .back{
+            width: 256px;
+            height: 168px;
+            background-size: 100% 100%;
+            background-image: url(back.png);
+            left: 0px;
+            top: 0px;
+        }
+
+        .csummary{
+            padding: 10px 0;
+            width: 100%;
+            height: 92px;
+            text-align: center;
+            line-height: 36px;
+            border: 0;
+            font: inherit;
+            font-size: 100%;
+            vertical-align: baseline;
+        }
+
+        .p{
+            margin-top: 4px;
+            font-size: 20px;
+        }
+
+
+        .a{
+            position: absolute;
+            margin-top: -2px;
+            margin-left: -25px;
+            font-size: 12px;
+            color: #38f;
+            text-decoration: none;
         }
 
     </style>
@@ -416,6 +504,25 @@
         <div class="wcard-right">
             <div class="img"></div>
         </div>
+    </div>
+
+    <div class="main">
+    <div class="yz-resolutions">
+        <div class="h2">为超过36个行业和场景提供经营解决方案</div>
+        <div class="rescontent">
+            <div class="resolution-card">
+                <div class="ccover">
+                    <div class="icon"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="csummary">
+                    <p class="p">小程序</p>
+                    <a class="a">了解更多</a>
+                </div>
+            </div>
+        </div>
+        
+    </div>
     </div>
 
     
