--- a/youzanshangcheng/Untitled-1.html
+++ b/youzanshangcheng/Untitled-1.html
@@ -416,6 +416,173 @@
             text-decoration: none;
         }
 
+        .icon1{
+            background-size: 100% 100%;
+            background-image: url(icon1.png);
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            margin: 0 auto;
+            left: 98px;
+            top: 54px;
+        }
+
+        .back1{
+            width: 256px;
+            height: 168px;
+            background-size: 100% 100%;
+            background-image: url(back1.png);
+            left: 0px;
+            top: 0px;
+        }
+
+        .icon2{
+            background-size: 100% 100%;
+            background-image: url(icon2.png);
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            margin: 0 auto;
+            left: 98px;
+            top: 54px;
+        }
+
+        .back2{
+            width: 256px;
+            height: 168px;
+            background-size: 100% 100%;
+            background-image: url(back2.png);
+            left: 0px;
+            top: 0px;
+        }
+
+        .resolution-card3{
+            position: absolute;
+            top: 178px;
+            right: -11px;
+            cursor: pointer;
+            width: 256px;
+            height: 256px;
+            border: 1px solid #e5e5e5;
+            border-radius: 2px;
+            margin-right: 20px;
+            margin-bottom: 20px;
+            transition: .5s;
+        }
+
+        .icon3{
+            background-size: 100% 100%;
+            background-image: url(icon3.png);
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            margin: 0 auto;
+            left: 98px;
+            top: 54px;
+        }
+
+        .back3{
+            width: 256px;
+            height: 168px;
+            background-size: 100% 100%;
+            background-image: url(back3.png);
+            left: 0px;
+            top: 0px;
+        }
+
+        .icon4{
+            background-size: 100% 100%;
+            background-image: url(icon4.png);
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            margin: 0 auto;
+            left: 98px;
+            top: 54px;
+        }
+
+        .back4{
+            width: 256px;
+            height: 168px;
+            background-size: 100% 100%;
+            background-image: url(back4.png);
+            left: 0px;
+            top: 0px;
+        }
+
+        .icon5{
+            background-size: 100% 100%;
+            background-image: url(icon5.png);
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            margin: 0 auto;
+            left: 98px;
+            top: 54px;
+        }
+
+        .back5{
+            width: 256px;
+            height: 168px;
+            background-size: 100% 100%;
+            background-image: url(back5.png);
+            left: 0px;
+            top: 0px;
+        }
+
+        .icon6{
+            background-size: 100% 100%;
+            background-image: url(icon6.png);
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            margin: 0 auto;
+            left: 98px;
+            top: 54px;
+        }
+
+        .back6{
+            width: 256px;
+            height: 168px;
+            background-size: 100% 100%;
+            background-image: url(back6.png);
+            left: 0px;
+            top: 0px;
+        }
+
+        .resolution-card7{
+            position: absolute;
+            top: 456.5px;
+            right: -11px;
+            cursor: pointer;
+            width: 256px;
+            height: 256px;
+            border: 1px solid #e5e5e5;
+            border-radius: 2px;
+            margin-right: 20px;
+            margin-bottom: 20px;
+            transition: .5s;
+        }
+
+        .icon7{
+            background-size: 100% 100%;
+            background-image: url(icon7.png);
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            margin: 0 auto;
+            left: 98px;
+            top: 54px;
+        }
+
+        .back7{
+            width: 256px;
+            height: 168px;
+            background-size: 100% 100%;
+            background-image: url(back7.png);
+            left: 0px;
+            top: 0px;
+        }
     </style>
 </head>
 <body>
@@ -510,6 +677,7 @@
     <div class="yz-resolutions">
         <div class="h2">为超过36个行业和场景提供经营解决方案</div>
         <div class="rescontent">
+
             <div class="resolution-card">
                 <div class="ccover">
                     <div class="icon"></div>
@@ -520,6 +688,84 @@
                     <a class="a">了解更多</a>
                 </div>
             </div>
+
+            <div class="resolution-card">
+                <div class="ccover">
+                        <div class="icon1"></div>
+                        <div class="back1"></div>
+                </div>
+                <div class="csummary">
+                        <p class="p">知识付费</p>
+                        <a class="a">了解更多</a>
+                    </div>
+            </div>
+
+            <div class="resolution-card">
+                    <div class="ccover">
+                            <div class="icon2"></div>
+                            <div class="back2"></div>
+                    </div>
+                    <div class="csummary">
+                            <p class="p">餐饮外卖</p>
+                            <a class="a">了解更多</a>
+                        </div>
+                </div>
+
+                <div class="resolution-card3">
+                        <div class="ccover">
+                                <div class="icon3"></div>
+                                <div class="back3"></div>
+                        </div>
+                        <div class="csummary">
+                                <p class="p">自媒体</p>
+                                <a class="a">了解更多</a>
+                            </div>
+                    </div>
+
+                    <div class="resolution-card">
+                            <div class="ccover">
+                                    <div class="icon4"></div>
+                                    <div class="back4"></div>
+                            </div>
+                            <div class="csummary">
+                                    <p class="p">票务卡券</p>
+                                    <a class="a">了解更多</a>
+                                </div>
+                        </div>
+
+                        <div class="resolution-card">
+                                <div class="ccover">
+                                        <div class="icon5"></div>
+                                        <div class="back5"></div>
+                                </div>
+                                <div class="csummary">
+                                        <p class="p">酒店客栈</p>
+                                        <a class="a">了解更多</a>
+                                    </div>
+                            </div>
+
+                            <div class="resolution-card">
+                                    <div class="ccover">
+                                            <div class="icon6"></div>
+                                            <div class="back6"></div>
+                                    </div>
+                                    <div class="csummary">
+                                            <p class="p">生鲜果蔬</p>
+                                            <a class="a">查看案例</a>
+                                        </div>
+                                </div>
+
+                                <div class="resolution-card7">
+                                        <div class="ccover">
+                                                <div class="icon7"></div>
+                                                <div class="back7"></div>
+                                        </div>
+                                        <div class="csummary">
+                                                <p class="p">蛋糕烘焙</p>
+                                                <a class="a">查看案例</a>
+                                            </div>
+                                    </div>
+
         </div>
         
     </div>
