--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -208,11 +208,13 @@
         display: block;
         font-size: 2.53em;
         }
+
         .h31{
         font-size: 20px;
         color: #777;
         margin-bottom: 55px;
         }
+
         .button{
         width: 160px;
         height: 40px;
@@ -224,6 +226,10 @@
         padding: 12px 42px;
         color: #fff;
         cursor: pointer;
+        }
+
+        .button:hover{
+            background-color: rgb(35, 117, 224);
         }
         .font{
         font-size: 14px;
@@ -404,6 +410,10 @@
             transition: .5s;
         }
 
+        .resolution-card:hover{
+            border-color: #38f;
+        }
+
         .ccover{
             height: 169px;
             width: 100%;
@@ -511,6 +521,10 @@
             transition: .5s;
         }
 
+        .resolution-card3:hover{
+            border-color: #38f;
+        }
+
         .icon3{
             background-size: 100% 100%;
             background-image: url(icon3.png);
@@ -603,6 +617,10 @@
             margin-right: 20px;
             margin-bottom: 20px;
             transition: .5s;
+        }
+
+        .resolution-card7:hover{
+            border-color: #38f;
         }
 
         .icon7{
