--- a/youzanshangcheng/youzan.html
+++ b/youzanshangcheng/youzan.html
@@ -639,7 +639,7 @@
 
         .use_yz{
             position: absolute;
-            top:3010px;
+            top:2380px;
             display:block;
             height: 734px;
             width: 100%;
@@ -767,7 +767,7 @@
             overflow: hidden;
             min-width: 1005px;
             max-width: 1100px;
-            height: 790px;
+            height: 700px;
             margin: 0 auto;
             position: relative;
             zoom: 1;
@@ -1042,6 +1042,115 @@
         .ump-card3:hover .ump-href3{
             color: #fff;
         }
+
+        .service{
+            position: absolute;
+            top: 3100px;
+            width: 100%;
+            height: 450px;
+            margin: 0;
+            padding: 0;
+            border: 0;
+            font-size: 100%;
+        }
+
+        .icon-container{
+            width: 1000px;
+        }
+
+        .biankuang{
+            position: absolute;
+            top: 200px;
+            left: 130px;
+            display: inline-block;
+            text-align: center;
+            width: 25%;
+            margin: 0;
+            padding: 0;
+        }
+
+        .service-img1{
+            background-image: url(img1.png);
+            width: 120px;
+            height: 120px;
+            margin: 0 auto;
+            margin-bottom: 15px;
+            background-size: contain;
+        }
+
+        .wenzi{
+            font-size: 18px;
+            color: #333;
+            line-height: 20px;
+        }
+
+        .bot-wenzi{
+            color: #999;
+            font-size: 12px;
+            line-height: 0px;
+        }
+
+        .biankuang2 {
+            position: absolute;
+            top: 200px;
+            left: 410px;
+            display: inline-block;
+            text-align: center;
+            width: 25%;
+            margin: 0;
+            padding: 0;
+        }
+
+        .service-img2{
+            background-image: url(img2.png);
+            width: 120px;
+            height: 120px;
+            margin: 0 auto;
+            margin-bottom: 15px;
+            background-size: contain;
+        }
+
+        .biankuang3 {
+            position: absolute;
+            top: 200px;
+            left: 680px;
+            display: inline-block;
+            text-align: center;
+            width: 25%;
+            margin: 0;
+            padding: 0;
+        }
+
+        .service-img3 {
+            background-image: url(img3.png);
+            width: 120px;
+            height: 120px;
+            margin: 0 auto;
+            margin-bottom: 15px;
+            background-size: contain;
+        }
+
+        .biankuang4 {
+            position: absolute;
+            top: 200px;
+            left: 950px;
+            display: inline-block;
+            text-align: center;
+            width: 25%;
+            margin: 0;
+            padding: 0;
+        }
+
+        .service-img4 {
+            background-image: url(img4.png);
+            width: 120px;
+            height: 120px;
+            margin: 0 auto;
+            margin-bottom: 15px;
+            background-size: contain;
+        }
+
+
     </style>
 </head>
 <body>
@@ -1299,19 +1408,8 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
     </div>
     </div>
-
-
-
-
-
-
-
 
 
     <div class="use_yz">
@@ -1337,6 +1435,38 @@
                             <p class="desc">经营类目：休闲零食</p>
                         </div>
                 </div>   
+    </div>
+
+
+    <div class="service">
+        <div class="h2">360°全方位一站式服务</div>
+        <div class="icon-container">
+
+            <div class="biankuang">
+                <div class="service-img1"></div>
+                <p class="wenzi">专业客服答疑</p>
+                <p class="bot-wenzi">7*12小时专业指导 答疑解惑</p>
+            </div>
+
+            <div class="biankuang2">
+                <div class="service-img2"></div>
+                <p class="wenzi">线上视频教学</p>
+                <p class="bot-wenzi">随时随地学习，提升能力</p>
+            </div>
+
+            <div class="biankuang3">
+                    <div class="service-img3"></div>
+                    <p class="wenzi">同行交流活动</p>
+                    <p class="bot-wenzi">直播、社区、商盟，实战分享</p>
+                </div>
+
+                <div class="biankuang4">
+                        <div class="service-img4"></div>
+                        <p class="wenzi">运营者特训营</p>
+                        <p class="bot-wenzi">培训优良运营人群，轻松招人</p>
+                    </div>
+
+        </div>
     </div>
 </body>
 </html>
